--- a/themes/tuan_theme/demo.htm
+++ b/themes/tuan_theme/demo.htm
@@ -10,7 +10,7 @@
         <link href="stylesheets/formatting.css" media="screen" rel="stylesheet" type="text/css">
         <link href="stylesheets/theme.css" media="screen" rel="stylesheet" type="text/css">
         <link href="stylesheets/home.css" media="screen" rel="stylesheet" type="text/css">
-
+<link href="stylesheets/ie6.css" media="screen" rel="stylesheet" type="text/css">
     </head>
 
     <body>
@@ -24,19 +24,19 @@
                             <ul>
                                 <li class="selected first" id="item_0">
                                     <a href="./yijia023_files/yijia023.htm">首页</a>                                </li>
-  <li id="item_1">
+<li id="item_1">
                                     <a href="http://localhost:3000/%E6%9C%8D%E5%8A%A1%E9%A1%B9%E7%9B%AE">服务项目</a>                                </li>
-  <li id="item_2">
+<li id="item_2">
                                     <a href="http://localhost:3000/%E8%B5%B0%E8%BF%9B%E7%9B%8A%E5%AE%B6">走进益家</a>                                </li>
-  <li id="item_3">
+<li id="item_3">
                                     <a href="http://localhost:3000/blog">家政知识</a>                                </li>
-  <li id="item_4">
+<li id="item_4">
                                     <a href="http://localhost:3000/news">行业动态</a>                                </li>
-  <li class="last" id="item_5">
+<li class="last" id="item_5">
                                     <a href="http://localhost:3000/contact">在线预约</a>                                </li>
                               <li class='menu_bar_unlink'>
 						023-65305533					</li>
-            </ul>
+                            </ul>
                         </nav>
                     </div>
 
